--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "require": {
-      "doctrine/orm": "^2.6.2",
-      "symfony/yaml": "2.*"
+      "doctrine/orm": "*"
   },
   "autoload": {
+    
       "psr-0": {"": "src/entities"}
   }
 }
